--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "firebase": "^9.1.1",
     "vue": "^2.6.11",
     "vue-slick-carousel": "^1.0.6"
   },
